home.css
/*
 * Color schemes (light is the default)
 */

body {
  background: floralwhite; /* #ffffaf0 */
  color: #222;
}

/* Contrast: 4.9:1 */
a, .highlight { color: #d42130; }
blockquote { border-left-color: #d42130; };

a:hover, a:focus {
  background: #d42130;
  color: floralwhite;
}

@media (prefers-color-scheme: dark) {
  body {
    background: black;
    color: floralwhite;
  }

  /* Contrast: 4.7:1 */
  a, .highlight { color: #df3442; }
  blockquote { border-left-color: #df3442; };

  a:hover, a:focus {
    background: #df3442;
    color: black;
  }
}

/*
 * Main formatting
 */

html {
  /* Preferred font, acceptable system fonts, fallback fonts */
  font-family: source-sans-pro, 'Source Sans Pro',
    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Ubuntu, Cantarell,
    'Fira Sans', Inter, 'Helvetica Neue', 'Open Sans', sans-serif;
  font-size: 16pt;
  line-height: 1.5;
  scroll-behavior: smooth;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0 auto;
  max-width: 34rem;
  padding: 2rem 1rem;
}

.header {
  margin-bottom: 2rem;
  text-align: right;
}

.footer {
  font-size: 75%; /* 12pt for a body size of 16pt */
  margin-top: 3rem;
}

h1 {
  font-size: 3rem;
  margin: 0 0 .5rem;
  font-weight: 900;
  letter-spacing: -.01em;
  line-height: 1;
  word-spacing: .05em;
}

h2 {
  font-size: 1.5rem;
  margin: 0 0 1.5rem -.5rem;
}

p {
  margin: 0 0 1.5rem;
  overflow-wrap: break-word;
  -webkit-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  word-spacing: .03em;
  word-wrap: break-word;
}

blockquote {
  margin: 0 0 1.5rem 1rem;
  padding-left: .5rem;
  border-radius: 3px;
}

a {
  border-radius: 3px;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
  padding: 2px 3px;
  text-decoration: none;
  transition: background-color .2s, color .2s;
}

a, strong {
  font-weight: bolder;
}

/*
 * Fancy-ish decorations
 */

.headline {
  font-size: 4rem;
}

h1, h2, .tagline, .social {
  text-transform: lowercase;
}

.social {
  word-spacing: .5rem;
}

/*
 * Alternative styling for small screens and wide screens
 */

.small-screen { display: none; }

@media screen and (max-width: 640px), screen and (max-height: 400px) {
  .small-screen { display: initial; }
  .headline { font-size: 3rem; }
  h1 { font-size: 2.5rem; }
  h2 { margin-left: 0; }

  blockquote {
    border-left-width: 3px;
    border-left-style: solid;
    margin-left: 0;
  }
}

